# den-subtitles

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-publish.yml
scripts/: smoke.sh
src/: addon.rs  cache.rs  config.rs  configure.html  fetch.rs  httputil.rs  main.rs  opensubtitles.rs  seal.rs  srt.rs  state.rs  sync.rs  translate.rs  userconfig.rs
