[package]
name = "den-subtitles"
version = "0.1.2"
edition = "2021"
description = "Den subtitles, one container: Stremio subtitles addon that fetches (OpenSubtitles, hash-matched), AI-translates (BYOK), and auto-syncs (alass/ffsubsync) SRTs for the Den Apple TV app"
publish = false

[[bin]]
name = "den-subtitles"
path = "src/main.rs"

[dependencies]
# current_thread async runtime — this is an I/O-bound proxy; the CPU work lives in the
# alass/ffsubsync/ffmpeg subprocesses and the LLM APIs, not here. Keeps homelab idle RAM minimal.
tokio = { version = "1", features = ["rt", "macros", "net", "process", "fs", "io-util", "time", "sync"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# rustls (not OpenSSL) with bundled webpki roots → no ca-certificates juggling, static-friendly TLS.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = { version = "0.3", default-features = false, features = ["std", "async-await"] }
base64 = "0.22"
# Sealed config-in-URL (docs mirror of den-scout/docs/SEALED-CONFIG.md): decrypt a config sealed to
# the addon's X25519 key. `seal` = libsodium crypto_box_seal (X25519 + XSalsa20-Poly1305, blake2b nonce),
# byte-compatible with the Go addon + the browser bundle. Decrypt-only here → no rng needed.
crypto_box = { version = "0.9", features = ["seal"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "net", "process", "fs", "io-util", "time", "sync", "test-util"] }

# Self-contained binary for a resource-constrained homelab. panic=unwind (default): a panic in one
# request task unwinds just that connection (tokio catches it) instead of aborting the whole server.
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
